# Modunote

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml
backend/configs/: config.cloud.toml  config.dev.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  telemetry.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
backend/crates/storage_postgres/: Cargo.toml
backend/crates/storage_postgres/.sqlx/: query-068c5ff418c83186c6f2f854c36616ecdd454adae849019140a84270c9ac9e4b.json  query-26cfa1a3757f77bf1cc0fd7cd391512d28e9713e7757be995b2e117ae6b42db6.json  query-2ac0b8735e8d4f610d79115487757ace8770892e8c9ecb401a7b71423cbe88c0.json  query-38a2ed93cc682e632f7e358e8e8d2cb0297c6a42ded329d955b8d6ddbf1ac5bd.json  query-39d8bcea9d5ad164f75c98249cf4fb57d90dadc15b6ff674c132444836b534bb.json  query-3f719a29838ade00ea750a7363bcb29c63b4e8d8d6dd8ee34cc996511515a6bb.json  query-43621de4fedf030c64a2b9d986ae092cab0f403e874a2effb43f8d33e2106209.json  query-5366567800a8a556c51b03b17b3f02af0e1cec1f03ff86271759720a3e813ae2.json  query-54578feca64daa516ff61465d9a35c83ab6e9710f6d6ca60fe739a48f50cd778.json  query-54ffb902d5cb71027b1ee379a91451627ef24e214a075c26e242b731966cdcbb.json  query-559064937dd7eb571f346c8a94683eaf238d74bb092f1da88d2448f17a61b180.json  query-58127f72e3b223ed363da6d405794d7345cc2ce9a66866e4beafc77ea711c516.json  query-5a9cef4741037c7c4104633e2386ee24028f3be0d7c50c2e900b561a472679f0.json  query-61653f45af2bf2dbecd37e208d02ae047aca6c8aff3e8064bf45e87d4daa2d22.json  query-630d40134cc706977546002731c0b8f72a69f81210f3ff53167e04c41a1089c5.json  query-788ffc24bd26e0183f58033bfb0535638e2d818607a6f558f3dd2de89049e6ff.json  query-845625314e03cf071b3a8cbdb01337e84e40b7ec32aaa5e8014c6e912c2ffe98.json  query-93b236bbf9d18fdacb775511f03e5b126836d92e3fb5d13a6fd2ee74a17f10dd.json  query-af23f90efe7fadee0aea900c353f042af29c1221455780cec5d23a68416d93d8.json  query-bb8ef822716fe337bae9aa73f1cbe37928d722b00de8ec71236a6c70dd7e134b.json  query-bf9772619d1c041bc237b9c89151d7e76087599b23ee285663450fbfc66feb5d.json  query-c6ee0ebdcf82d8a902a3d1b7bcd9d0d740c0cd523d91d0996ba825a201f4f80e.json  query-d2a51266fe7a39095f513d7d845bed983b26766ad1945efb4f0bfa61796936ec.json  query-dbc10c54980346c4316505598415da442c90e53d8e81a7b705eeb3ca41bd9105.json  query-e2831b4e8ed47eff3ec418922380e3c3ff05f188bc08a7b996fadb07f0fc9781.json  query-f27e6551652ebf504773cdd35923c76a45a535556ade41a91ab125ebfa473f08.json  query-f47c235fa9dd17e6ccd54f6d1661a7ea310da1ce1cfe90cd200c4bac3613ac3e.json  query-f4cbe7ff644b6eab0e8c21e92ba358b83f287d174388bde06de1f898c353bb76.json  query-f6baac5fe23f0560ec87c434daa375799c3abeacd08fcf0b8cc2250353c621f0.json  query-f7ea19620d0a6b78cd8520a171c1a4fec8ae6d4c05f54a9d79c9b99399eb3b55.json  query-ff3a62d610fb1a98686dc57b6725a46a77530b2cf35355d828207e9e1b0299fd.json
backend/crates/storage_postgres/migrations/: 20250902000000_create_blocks_table.sql  20250902000001_create_block_opens_table.sql  20250902000002_create_block_pins_table.sql  20250902000003_create_block_directional_links_table.sql  20250902000004_create_block_related_links_table.sql  20250902000005_create_block_directional_paths_table.sql  20250902000006_create_canvases_table.sql  20250902000007_create_canvas_blocks_table.sql  20250902000008_create_canvas_pins_table.sql  20250903000001_add_tab_index_to_block_opens.sql
backend/crates/storage_postgres/src/: database.rs  lib.rs
backend/crates/storage_postgres/tests/: block_directional_link_repository_contract.rs  block_directional_path_helper_contract.rs  block_link_query_service_contract.rs  block_query_service_contract.rs  block_related_link_repository_contract.rs  block_repository_contract.rs  database_contract.rs  fixtures.rs  workspace_repository_contract.rs
backend/crates/storage_sqlite/: Cargo.toml
backend/crates/storage_sqlite/.sqlx/: query-11e3e2f0735b9131273cfd9b3088494a81add06d3a08128f46c76c71d793691d.json  query-17aac6653ddfbe72c8d720afae7cebe9ee799bf4905d3d33a368453dd507f814.json  query-1d224bbe9d4339a37f8d5a9fb49453e73f1ddb6abd74250d3a3d12e8b3ab4416.json  query-38a2ed93cc682e632f7e358e8e8d2cb0297c6a42ded329d955b8d6ddbf1ac5bd.json  query-43621de4fedf030c64a2b9d986ae092cab0f403e874a2effb43f8d33e2106209.json  query-4f5a67cfb748fbfa7b15bad8b92fc552272f0c19696ff7a6132ffd8d5fdf540b.json  query-51ecd02c7a3c0da35bc0a75378538ac9f365117cb87d5ca959e7a95986295bb4.json  query-608de821784a9b7c76ca3b6126b438f8ec1eb468bed7aeaaa8d3c0475a161e0f.json  query-61653f45af2bf2dbecd37e208d02ae047aca6c8aff3e8064bf45e87d4daa2d22.json  query-6b7756d0b82ff1b565aee99b761306283035c47c74c0c313602284bc90b3a1ae.json  query-788ffc24bd26e0183f58033bfb0535638e2d818607a6f558f3dd2de89049e6ff.json  query-7adc55b6c9eae201e942f28cd54e2fa44b522cb65db83488cfa5050cd46bacee.json  query-809bb2d3005498aedaf2d4888218eb22144482e97d48ed531331aa9428cc7c88.json  query-93b236bbf9d18fdacb775511f03e5b126836d92e3fb5d13a6fd2ee74a17f10dd.json  query-96a965a899b0ea637a947350ac34a65c5299f35a42c42f0a0693238c75c9a6b3.json  query-97600595ea8123dd36125266739be0a42a665a1037f4fd94497b41684c29ff0a.json  query-98ac7d377dbac0636a7b5129768f5ba052a8ad02d5b4fe06915fbf5b9c3d9b7b.json  query-ad08150dea2c20645f13e21bc6be8e181e70caf4e67f197cf4fa03dbc905f94e.json  query-b449c88bac4bed973dbf611b09ff95bc20bb5e7003b030d57dd8b3597d8722fc.json  query-bf9772619d1c041bc237b9c89151d7e76087599b23ee285663450fbfc66feb5d.json  query-c08b419a06847d4da5ef717ef3ddaee19e1b74a3a55cb442b1ab9ceb1c436da7.json  query-c12c8ebb8ddb14892b6916c5cee250a505540f349cfc95136ad294cd02a42a2d.json  query-c48238ac8204fafe522df0697876c52fecb759072a8e29b9b62ee46908153d61.json  (+8 more)
backend/otel/: loki-config.yaml  otel-collector-config.yaml
backend/src/: app_state.rs  error.rs  lib.rs  main.rs
backend/src/features/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  repository_provider.rs
(+389 files in other folders)
