[workspace]
members = [
    "crates/engine",
    "crates/parser",
    "crates/search",
    "crates/storage",
    "backend"
]
resolver = "3"

[workspace.dependencies]
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }