[workspace]
members = [
    "crates/engine",
    "crates/storage",
    "backend"
]
resolver = "3"

[workspace.dependencies]
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
regex = "1.11.1"
thiserror = "2.0.16"
async-trait = "0.1.89"

[profile.dev.package.sqlx-macros]
opt-level = 3