[workspace]
members = [
    "crates/api",
    "crates/domain",
    "crates/storage",
    "crates/storage_sqlite",
    "crates/storage_postgres"
]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6"}
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
rstest = "0.26.1"


[profile.dev.package.sqlx-macros]
opt-level = 3