[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
default = ["cloud"]
native = ["storage-sqlite"]
cloud = ["storage-postgres"]

[dependencies]
axum = "0.8.4"
dotenvy = "0.15"
cfg-if = "1.0"
opentelemetry = "0.31"
opentelemetry_sdk = {version="0.31", features = ["rt-tokio"]}
opentelemetry-otlp = {version="0.31", features = ["grpc-tonic", "trace", "tls"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-opentelemetry = "0.32"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.9"
tonic= {version="0.14", features = ["tls-native-roots"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"

chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = {workspace = true}
uuid  = { workspace = true }


domain = { path = "../domain" }
storage = { path = "../storage"}
storage-sqlite = {path= "../storage_sqlite", optional = true}
storage-postgres = {path="../storage_postgres", optional = true}