[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = {workspace = true}
thiserror = { workspace = true }
uuid = { workspace = true }

domain = { path = "../domain" }