[package]
name = "storage-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true , features = ["runtime-tokio", "uuid", "chrono", "macros", "json", "sqlite"] }

async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

domain = { path = "../domain" }
storage = { path = "../storage"}

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
storage = { path = "../storage", features = ["test-utils"] }
rstest = { workspace = true }
